// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fileOperations generate the files for the absolute path 1`] = `
"import React from 'react'
export const SomeClassComponent = props => {
  return React.createElement(\\"SomeClassComponent\\", props);
};"
`;

exports[`fileOperations generate the files for the absolute path 2`] = `
"import React from 'react'
export const HelloComponent = props => React.createElement(\\"HelloComponent\\", props);"
`;

exports[`fileOperations generate the files for the absolute path 3`] = `
"import React from 'react'
export const foo = jest.fn();"
`;
